--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
   },
   "homepage": "https://github.com/Mimaaa/MINOR_WD_PEMA-NODE#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.1",
+    "formidable": "^1.1.1",
+    "fs": "0.0.1-security",
+    "parseurl": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
